# flutter-custom-libp2p

./: Makefile  README.md  pubspec.yaml
.github/workflows/: tests_android.yml  tests_browser.yml  tests_ios.yml  tests_linux.yml  tests_macos.yml  tests_windows.yml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/integration_test/: app_test.dart
example/lib/: allowNodeWidget.dart  blockNodeWidget.dart  checkConnectionStatusWidget.dart  connectToPeerWidget.dart  createKeyPairWidget.dart  createNodeWidget.dart  denyNodeWidget.dart  getAllowedNodesWidget.dart  getBlockedNodesWidget.dart  getDatabaseDirectoryWidget.dart  getDownloadPathWidget.dart  getDownloadStatusWidget.dart  getDownloadingFilesWidget.dart  getHelloMessageWidget.dart  getListenAddressesWidget.dart  getNodeIdWidget.dart  getUploadingFilesWidget.dart  isAllowedNodeWidget.dart  isBlockedNodeWidget.dart  main.dart  notificationHandler.dart  pauseDownloadWidget.dart  resumeDownloadWidget.dart  sendMessageWidget.dart  serveFileWidget.dart  stopDownloadWidget.dart  stopNodeWidget.dart  stopServingFileWidget.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: plugin_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: custom_libp2p.podspec  custom_libp2p_bridge.h
ios/Classes/: CustomLibP2PPlugin.h  CustomLibP2PPlugin.m  SwiftCustomLibP2PPlugin.swift
lib/: custom_libp2p.dart  custom_libp2p_constants.dart
lib/bridge/: binding.dart  binding_stub.dart  ffi.dart
lib/model/: bridge_model_generated.dart
lib/models/: download_status.pb.dart  download_status.pbenum.dart  download_status.pbjson.dart  download_status.pbserver.dart  file_metadata.pb.dart  file_metadata.pbenum.dart  file_metadata.pbjson.dart  file_metadata.pbserver.dart  key_pair.pb.dart  key_pair.pbenum.dart  key_pair.pbjson.dart  key_pair.pbserver.dart  message.pb.dart  message.pbjson.dart  models.dart  notification.pb.dart  notification.pbjson.dart  requests.pb.dart  requests.pbenum.dart  requests.pbjson.dart  requests.pbserver.dart  utils.pb.dart  utils.pbjson.dart  utils.pbserver.dart  warning.pb.dart  warning.pbenum.dart  warning.pbjson.dart  warning.pbserver.dart
linux/: CMakeLists.txt  custom_libp2p_plugin.cc
linux/include/custom_libp2p/: custom_lib_p2_p_plugin.h
linux/shared/aarch64/: custom_libp2p_bridge.h
macos/: custom_libp2p.podspec  custom_libp2p_bridge.dylib
scripts/: upgrade_bridge_flatbuffers.sh  upgrade_bridge_libs.sh  upgrade_bridge_protobuf.sh
windows/: CMakeLists.txt  custom_libp2p_plugin.cpp
windows/include/custom_libp2p/: custom_lib_p2_p_plugin.h
windows/shared/: custom_libp2p_bridge.h  libcustom_libp2p_bridge.h
(+25 files in other folders)
